// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders borderless button 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 4px;
  border: 0;
  box-shadow: none;
  color: #1785FB;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: 500 12px/20px 'Roboto';
  margin: 0;
  padding: 6px 12px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  vertical-align: top;
}

.c0:hover {
  background: rgba(23,133,251,0.16);
}

.c0:focus {
  background: rgba(23,133,251,0.32);
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.24;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: transparent;
  color: #1785FB;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders secondary button 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 4px;
  border: 1px solid #1785FB;
  box-shadow: none;
  color: #1785FB;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: 500 12px/20px 'Roboto';
  margin: 0;
  padding: 6px 12px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  vertical-align: top;
}

.c0:hover {
  background: rgba(23,133,251,0.16);
}

.c0:focus {
  background: rgba(23,133,251,0.32);
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.24;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: transparent;
  color: #1785FB;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders with large param 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #1785FB;
  border-radius: 4px;
  border: 0;
  box-shadow: none;
  color: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: 500 16px/24px 'Roboto';
  margin: 0;
  padding: 8px 16px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  vertical-align: top;
}

.c0:hover {
  background: #035dbd;
}

.c0:focus {
  background: #034995;
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.24;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders with small param 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #1785FB;
  border-radius: 4px;
  border: 0;
  box-shadow: none;
  color: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: 400 10px/12px 'Roboto';
  margin: 0;
  padding: 6px 8px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  vertical-align: top;
}

.c0:hover {
  background: #035dbd;
}

.c0:focus {
  background: #034995;
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.24;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #1785FB;
  border-radius: 4px;
  border: 0;
  box-shadow: none;
  color: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: 500 12px/20px 'Roboto';
  margin: 0;
  padding: 6px 12px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  vertical-align: top;
}

.c0:hover {
  background: #035dbd;
}

.c0:focus {
  background: #034995;
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.24;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;
